Fix navigation alignment

--- a/static/css/desktop.css
+++ b/static/css/desktop.css
@@ -45,9 +45,11 @@ small {
 
 /*header */
 header {
-  margin: 0;
+  margin: auto 0;
   padding: 0;
   display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 header a {
@@ -85,10 +87,8 @@ header a:hover {
 
 #site-title {
   padding: 0;
-  margin: auto 0;
   text-align: left;
   padding-left: 2em;
-  line-height: 2;
 }
 
 #site-title a {
